<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>btx.prog.one</groupId>
	<artifactId>exes</artifactId>
	<name>btx.prog.one.exes</name>
	<version>1.0</version>
	<properties>
		<java.version>17</java.version>
		<javafx.version>17.0.0.1</javafx.version>
		<appModule>btx.prog.one.exes</appModule>
		<mainClass>btx.prog.one.sample.App</mainClass>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.6</version>
				<executions>
					<execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
						<id>default-cli</id>
						<configuration>
							<mainClass>${appModule}/${mainClass}</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>mac</id>
			<activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<outputDirectory>target/jmods</outputDirectory>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.1.2</version>
						<executions>
							<execution>
								<id>copy-dependencies</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<includeScope>runtime</includeScope>
									<outputDirectory>target/jmods</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<!-- Usage: mvn clean package jpackage:jpackage -Pmac [-Djpackage.dryRun=true] -->
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>1.5.1</version>
						<configuration>
							<name>JavaFX Hello World</name>
							<appVersion>${project.version}</appVersion>
							<vendor>ch.bfh.dubuis</vendor>
							<!-- <icon>icons/icons.icns</icon> -->
							<runtimeImage>${java.home}</runtimeImage>
							<module>${appModule}/${mainClass}</module>
							<destination>target/dist</destination>
							<additionalOptions>
								<option>--module-path</option>
								<option>target/jmods</option>
							</additionalOptions>
							<javaOptions>
								<option>--enable-preview</option>
								<option>-Dfile.encoding=UTF-8</option>
							</javaOptions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
